--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/moujine/amogus/main/media/téléchargé.jpeg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/moujine/amogus/main/media/36f0a25b962463759e627a3d2272349d.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
